# AIRobot

./: .gitignore  README.md
Proto V1/Rover/motor/: DAC.py  LidarWithMotor.py  taco.py  vel_controller.py
Proto V1/Rover/rplidar/: LidarWithLED.py  LidarWithLED_buzzing.py  a.py  demo.py  sample.py
Proto V1/ros2_packages/: hallway.pgm  hallway.yaml  mapper_params_online_async.yaml
Proto V1/ros2_packages/airobot_controller/: setup.py
Proto V1/ros2_packages/odom/: package.xml
Proto V1/ros2_packages/odom/launch/: localization_launch.py  slam_launch.py  wheel_vel_launch.py
Proto V1/ros2_packages/odom/odom/: LaserToBase.py  bno.py  leftWheel2.py  mapToOdomTF.py  motor_wrapper.py  odomPublisher2.py  rightWheel.py  taco.py  teleopWheel.py
Proto V2/Documentation/: Ideas.md  Procedures.md  Welcome.md
Proto V2/Documentation/.obsidian/: app.json  community-plugins.json  graph.json  types.json  workspace.json
Proto V2/Documentation/.trash/: Parts.md  Remote Desktop Setup.md  Task Note.md
Proto V2/Documentation/Archive/: Proto V1 Power Supply System.md  (+2 more)
Proto V2/Proto V2 Documentation/: Welcome.md
Rover/motor/: LidarWithMotor.py  controller.py  input.txt  linear_regression.py  motors.py  motors_control.py  velTest.py  vel_motors.py
Rover/remote/: controller.py  server.py
Rover/rplidar/: LidarWithLED.py  LidarWithLED_buzzing.py  demo.py  sample.py
docker/: Dockerfile  build.sh  container_init.sh  start.sh
ros2_packages/airobot_controller/: package.xml  setup.cfg
ros2_packages/odom/: CMakeLists.txt  setup.py
ros2_packages/yolo/: package.xml  setup.py
(+115 files in other folders)
