<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="airobot@todo.todo">airobot</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>geometry.msgs</depend>
  <depend>from std_msgs</depend>
  <depend>getch</depend>

  <build_depend>launch</build_depend>
  <exec_depend>launch</exec_depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
